moved rpc-endpoints to /rpc/<endpoint>
