# datameta/api/__init__.py
@@ -43,7 +43,7 @@ def includeme(config: Configurator) -> None:
     config.add_route("apikeys_id", base_url + "/keys/{id}")
     config.add_route("user_id_keys", base_url + "/users/{id}/keys")
     config.add_route("SetUserPassword", base_url + "/users/{id}/password")
-    config.add_route("whoami", base_url + "/whoami")
+    config.add_route("rpc_whoami", base_url + "/rpc/whoami")
     config.add_route("user_id", base_url + "/users/{id}")
     config.add_route("metadata", base_url + "/metadata")
     config.add_route("metadata_id", base_url + "/metadata/{id}")
@@ -57,6 +57,8 @@ def includeme(config: Configurator) -> None:
     config.add_route("presubvalidation", base_url + "/presubvalidation")
     config.add_route("groups_id_submissions", base_url + "/groups/{id}/submissions")
     config.add_route("groups_id", base_url + "/groups/{id}")
+    config.add_route("rpc_delete_files", base_url + "/rpc/delete-files")
+    config.add_route("rpc_delete_metadatasets", base_url + "/rpc/delete-metadatasets")
 
     # Endpoint outside of openapi
     config.add_route("upload", base_url + "/upload/{id}")
